source/tests/errors/invalid_for.apex
for x to 10
    os.output(x)